<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.view.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="412dp"
            android:layout_height="729dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnknownIdInLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_login_form"
                android:layout_width="273dp"
                android:layout_height="196dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5">

                <EditText
                    android:id="@+id/et_email_register"
                    android:layout_width="240dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:autofillHints="Email"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/login_password_text"
                    app:layout_constraintStart_toStartOf="@+id/cl_login_form"
                    app:layout_constraintTop_toBottomOf="@+id/et_email_register" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="240dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/login_email_text"
                    app:layout_constraintStart_toStartOf="@+id/cl_login_form"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
                    app:srcCompat="@drawable/ic_eye_login" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/et_email_register"
                    app:layout_constraintHorizontal_bias="0.555"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/et_email_register"
                    app:srcCompat="@drawable/ic_person_login" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
                    app:srcCompat="@drawable/ic_padlock_login_2" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/bt_send"
                style="@style/MyAppButton"
                android:layout_width="214dp"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bt_orange_shape"
                android:fontFamily="@font/lato"
                android:shadowColor="#A8A8A8"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/login_button_text"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_recover_password" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="93dp"
                android:layout_height="88dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_app_logo_peach"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/imageView4"
                android:layout_width="214dp"
                android:layout_height="49dp"

                android:layout_marginTop="24dp"
                android:background="@drawable/bt_facebook_shape"
                android:drawableStart="@drawable/ic_logo_do_facebook_login"
                android:fontFamily="@font/lato"
                android:paddingStart="22dp"

                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/login_facebook_button_text"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_register"
                tools:ignore="RtlSymmetry" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bt_register"
                android:layout_width="233dp"
                android:layout_height="34dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_send">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/login_register_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:srcCompat="@drawable/ic_skin_text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bt_recover_password"
                android:layout_width="152dp"
                android:layout_height="33dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/cl_login_form"
                app:layout_constraintTop_toBottomOf="@+id/cl_login_form">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/lato"
                    android:text="Esqueci minha senha"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>