<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.view.HomeActivity">


    <TextView
        android:id="@+id/tv_empty_list_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="nenhum item adicionado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2CC4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="77dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato"
            android:text="@string/home_morning_text"
            android:textColor="#616161"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sun_home"
            app:tint="#616161" />

        <LinearLayout
            android:id="@+id/bt_plus_morning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <Button
            style="@style/MyAppButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="false"
            android:focusable="false"
            android:background="@drawable/bt_plus_shape"
            android:fontFamily="@font/lato_bold"
            android:shadowColor="#A8A8A8"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="@string/home_button_plus"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:background="#2CC4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_chores_morning">

        <LinearLayout
            android:id="@+id/bt_plus_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                style="@style/MyAppButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bt_plus_shape"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/lato_bold"
                android:shadowColor="#A8A8A8"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/home_button_plus"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>


        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_moon_home"
            app:tint="#616161" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="62dp"
            android:layout_height="26dp"
            android:fontFamily="@font/lato"
            android:text="@string/home_night_text"
            android:textColor="#616161"
            android:textSize="23sp"
            app:layout_constraintEnd_toStartOf="@+id/bt_plus_night"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_empty_list_morning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="nenhum item adicionado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chores_morning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tv_empty_list_morning"
        tools:itemCount="3"
        tools:listitem="@layout/item_home" />

    <ProgressBar
        android:id="@+id/pb_chores_morning"
        style="?android:attr/progressBarStyle"
        android:layout_width="71dp"
        android:layout_height="61dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_chores_morning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rv_chores_morning"
        app:layout_constraintTop_toTopOf="@+id/rv_chores_morning" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chores_night"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tv_empty_list_night"
        tools:itemCount="3"
        tools:listitem="@layout/item_home" />

    <ProgressBar
        android:id="@+id/pb_chores_night"
        style="?android:attr/progressBarStyle"
        android:layout_width="71dp"
        android:layout_height="61dp"
        android:layout_marginTop="275dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_chores_night"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rv_chores_night"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
<!--        app:layout_constraintTop_toTopOf="@+id/rv_chores_night" -->
        />


</androidx.constraintlayout.widget.ConstraintLayout>